# DSA-LAB

./: CMakeLists.txt
DSA  lab 3/Task 1(sequence printing)/: main.cpp
DSA  lab 3/task 2 (binomial)/: main.cpp
DSA  lab 3/task 3(prime)/: main.cpp
DSA  lab 4/Task 1/: header.h  main.cpp
DSA LAB 1 (Templates)/: Template.cpp
DSA LAB 2/Task 2/: Student.cpp  Student.h  Student.txt  main.cpp
DSA LAB 2/task 1/: Stack.cpp  Stack.h  main.cpp
DSA lab 4 (Queue)/Task 1/: Queue.cpp  Queue.h  main.cpp
DSA lab 4 (Queue)/Task 2/: Queue.cpp  Queue.h  main.cpp
