cmake_minimum_required(VERSION 4.0)
project(DSA_LAB)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSA_LAB
        "DSA LAB 1 (Templates)/Template.cpp"
        "DSA  lab 3/Task 1(sequence printing)/main.cpp"
        "DSA  lab 3/task 2 (binomial)/main.cpp"
        "DSA  lab 3/task 3(prime)/main.cpp"
        "DSA lab 4 (Queue)/Task 1/queue.h"
        "DSA lab 4 (Queue)/Task 1/Queue.cpp"
        "DSA lab 4 (Queue)/Task 1/main.cpp"
        "DSA lab 4 (Queue)/Task 2/Queue.h"
        "DSA lab 4 (Queue)/Task 2/Queue.cpp"
        "DSA lab 4 (Queue)/Task 2/main.cpp"
)
